--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "next": "13.5.6",
     "next-auth": "^4.24.2",
     "react": "18.2.0",
+    "clsx": "^2.1.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
